fix-all-egress-policy.yaml
# Temporary Cilium policy to allow all egress traffic
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-egress
spec:
  description: "Allow all egress traffic for all pods"
  endpointSelector: {}
  egress:
  - toEntities:
    - all
