fix-dns-policy.yaml
# Cilium network policy to allow DNS for all pods
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-globally
spec:
  description: "Allow all pods to access CoreDNS"
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"  
        protocol: TCP
  - toServices:
    - k8sService:
        serviceName: kube-dns
        namespace: kube-system
  - toEntities:
    - kube-apiserver
    - cluster
    - world  # Allow external DNS as well
